--- a/PYconFR2014.ipynb
+++ b/PYconFR2014.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:a47f5d4018846aca0f35e671e27f97fb7fc9bd531b8ca6b960b2b1f4c8f5d120"
+  "signature": "sha256:0e3326ae23d28b8b3cf06f3227a84ecc1366715ba08935d57970625747c44b16"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -75,11 +75,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x7ff9640627d0>"
+        "<IPython.core.display.HTML at 0x7f533432a4d0>"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -91,10 +91,10 @@
      "source": [
       "<h1><div id=\"talk-title\">Conf\u00e9rence PYconFR 2014</div></h1>\n",
       "<center>\n",
-      "<img style=\"float:center; display:inline; width:200px;\" src=\"files/PYconFR.png\" alt=\"PYconFR\"/>\n",
+      "<img style=\"float:center; display:inline; width:200px;\" src=\"Figures/PYconFR.png\" alt=\"PYconFR\"/>\n",
       "</center>\n",
       "<center>\n",
-      "<img style=\"float:center; display:inline; width:600px;\" src='files/ipynblogo.png'> \n",
+      "<img style=\"float:center; display:inline; width:600px;\" src='Figures/ipynblogo.png'> \n",
       "</center>\n",
       "<h2><div id=\"talk-subtitle\">pour l'enseignement</div></h2>"
      ]
@@ -204,7 +204,7 @@
       }
      },
      "source": [
-      "<h1><div id=\"talk-subtitle\">Pourquoi <img style=\"display:inline; width:250px;\"src=\"python.png\"></div></h1>\n",
+      "<h1><div id=\"talk-subtitle\">Pourquoi <img style=\"display:inline; width:250px;\"src=\"Figures/python.png\"></div></h1>\n",
       "\n",
       "<p style=\"text-align: left;\"><i class=\"icon-meh icon-2x\"> Suivre une mode</i></p>\n",
       "\n",
@@ -245,7 +245,7 @@
       }
      },
      "source": [
-      "<h1><div id=\"talk-subtitle\"><img style=\"float:center; display:inline; width:250px;\" src=\"python.png\"> en science</div></h1>\n",
+      "<h1><div id=\"talk-subtitle\"><img style=\"float:center; display:inline; width:250px;\" src=\"Figures/python.png\"> en science</div></h1>\n",
       "\n",
       "## Projet \"NadiaSpectral\" \n",
       "(M. Buffat, A. Cadiou, L. Le Penven)\n",
@@ -288,13 +288,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 2,
        "text": [
-        "<IPython.lib.display.YouTubeVideo at 0x7ff96c0b9810>"
+        "<IPython.lib.display.YouTubeVideo at 0x7f533432aed0>"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -311,7 +311,7 @@
       }
      },
      "source": [
-      "<h1><div id=\"talk-subtitle\">Pourquoi <img style=\"float:center; display:inline; width:250px;\" src='ipynblogo.png'></div></h1>\n",
+      "<h1><div id=\"talk-subtitle\">Pourquoi <img style=\"float:center; display:inline; width:250px;\" src='Figures/ipynblogo.png'></div></h1>\n",
       "\n",
       "<p style=\"text-align: left;\"><i class=\"icon-check icon-2x\"> Environnement de programmation</i></p> \n",
       "\n",
@@ -379,13 +379,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 3,
        "text": [
-        "<IPython.lib.display.YouTubeVideo at 0x7ff96c07d350>"
+        "<IPython.lib.display.YouTubeVideo at 0x7f53342b4110>"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -437,13 +437,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 4,
        "text": [
-        "<IPython.lib.display.IFrame at 0x7ff96c0b9fd0>"
+        "<IPython.lib.display.IFrame at 0x7f533432a490>"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -475,7 +475,7 @@
       }
      },
      "source": [
-      "<img src=\"files/MOOC_poster.jpg\" alt=\"MOOC\" width=\"100%\"/>"
+      "<img src=\"Figures/MOOC_poster.jpg\" alt=\"MOOC\" width=\"100%\"/>"
      ]
     },
     {
@@ -494,7 +494,7 @@
      },
      "source": [
       "<h1><div id=\"talk-subtitle\">MOOC INPROS </div></h1>\n",
-      "<center><img src=\"files/logo_trans.png\" alt=\"INPROS\" width=\"200\"/></center>\n",
+      "<center><img src=\"Figures/logo_trans.png\" alt=\"INPROS\" width=\"200\"/></center>\n",
       "\n",
       "## INtroduction \u00e0 la PROgrammation Scientifique##\n",
       "\n",
@@ -523,7 +523,7 @@
       }
      },
      "source": [
-      "<h2><div id=\"talk-subtitle\"><img style=\"float:center; display:inline; width:300px;\" src='ipynblogo.png'> dans INPROS</div></h2>\n",
+      "<h2><div id=\"talk-subtitle\"><img style=\"float:center; display:inline; width:300px;\" src='Figures/ipynblogo.png'> dans INPROS</div></h2>\n",
       "\n",
       "### Remplace une  pr\u00e9sentation statique \n",
       "- style beamer $\\LaTeX$ ou powerpoint\n",
@@ -556,14 +556,14 @@
       }
      },
      "source": [
-      "<h1><div id=\"talk-subtitle\">Le\u00e7on avec <img style=\"float:center; display:inline; width:400px;\" src='ipynblogo.png'></div></h1>\n",
+      "<h1><div id=\"talk-subtitle\">Le\u00e7on avec <img style=\"float:center; display:inline; width:400px;\" src='Figures/ipynblogo.png'></div></h1>\n",
       "\n",
       "<center><h3>\n",
-      "<a href=\"http://localhost:8900/notebooks/COURS_PRECISION/Precision.ipynb\">Cours sur la pr\u00e9cision et la validation</a>\n",
+      "<a href=\"COURS_PRECISION/Precision.ipynb\">Cours sur la pr\u00e9cision et la validation</a>\n",
       "</h3></center>\n",
       "<p>\n",
       "<center>\n",
-      "<img style=\"float:center; display:inline; width:600px;\" src=\"CoursINPROS.png\" />\n",
+      "<img style=\"float:center; display:inline; width:600px;\" src=\"Figures/CoursINPROS.png\" />\n",
       "</center>"
      ]
     },
@@ -576,7 +576,7 @@
      },
      "source": [
       "<h1><div id=\"talk-subtitle\">SageCell</div></h1>\n",
-      "<center><img src='sage-banner-02.png'></center>"
+      "<center><img src='Figures/sage-banner-02.png'></center>"
      ]
     },
     {
@@ -656,13 +656,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 5,
        "text": [
-        "<IPython.lib.display.IFrame at 0x7ff96c0b9b50>"
+        "<IPython.lib.display.IFrame at 0x7f533432abd0>"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -714,13 +714,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 6,
        "text": [
-        "<IPython.lib.display.IFrame at 0x7ff96c0b9ed0>"
+        "<IPython.lib.display.IFrame at 0x7f533432aa90>"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 6
     },
     {
      "cell_type": "heading",
@@ -772,13 +772,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 7,
        "text": [
-        "<IPython.lib.display.IFrame at 0x7ff96c0b9ad0>"
+        "<IPython.lib.display.IFrame at 0x7f533432afd0>"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -797,7 +797,7 @@
      "source": [
       "<h1><div id=\"talk-title\">MOOC InProS</div></h1>\n",
       "<center>\n",
-      "<img style=\"float:center; display:inline; width:200px;\" src=\"files/logo_trans.png\" alt=\"INPROS\"/>\n",
+      "<img style=\"float:center; display:inline; width:200px;\" src=\"Figures/logo_trans.png\" alt=\"INPROS\"/>\n",
       "</center>\n",
       "\n",
       "\n",
@@ -810,7 +810,7 @@
       "<p style=\"text-align: left;\"><i class=\"icon-facebook icon-2x\"> [MOOCINPROS](https://www.facebook.com/MOOCINPROS)</i></p>\n",
       "\n",
       "\n",
-      "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/2.0/fr/\"><img alt=\"Licence Creative Commons\" style=\"border-width:0;float:right;\" src=\"files/cc.png\" /></a><br/>"
+      "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/2.0/fr/\"><img alt=\"Licence Creative Commons\" style=\"border-width:0;float:right;\" src=\"Figures/cc.png\" /></a><br/>"
      ]
     },
     {
@@ -856,7 +856,7 @@
       "\n",
       "- serveur IPython avec partage des notebooks\n",
       "\n",
-      "##<img style=\"float:center; display:inline; width:80px;\", src=\"sagemath-cloud.png\"/>  projet [Sage Math Cloud](https://cloud.sagemath.com/)"
+      "##<img style=\"float:center; display:inline; width:80px;\", src=\"Figures/sagemath-cloud.png\"/>  projet [Sage Math Cloud](https://cloud.sagemath.com/)"
      ]
     },
     {
@@ -905,9 +905,9 @@
      },
      "source": [
       "<center>\n",
-      "<img style=\"float:center; display:inline; width:400px;\" src='files/face_question_mark1.png'> \n",
+      "<img style=\"float:center; display:inline; width:400px;\" src='Figures/face_question_mark1.png'> \n",
       "</center>\n",
-      "<h3>Power by </h3><img src='ipynblogo.png'>"
+      "<h3>Power by </h3><img src='Figures/ipynblogo.png'>"
      ]
     }
    ],
