--- a/PYconFR2014.ipynb
+++ b/PYconFR2014.ipynb
@@ -1,8 +1,7 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:0e3326ae23d28b8b3cf06f3227a84ecc1366715ba08935d57970625747c44b16"
+  "signature": "sha256:8dff7f58e12584519f236c6bc7182a03b0155c84bea12a9a74cc562d453e34de"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -75,15 +74,20 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x7f533432a4d0>"
+        "<IPython.core.display.HTML at 0x7f4e64c7c6d0>"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -123,7 +127,7 @@
       "\n",
       "<p style=\"text-align: left;\"><i class=\"icon-globe\"> <a href=\"http://ufrmeca.univ-lyon1.fr/~buffat\">ufrmeca.univ-lyon1.fr/~buffat</a></i></p>\n",
       "\n",
-      " \n"
+      "<p style=\"text-align: left;\"><i class=\"icon-github\"> <a href=\"https://github.com/mbuffat\"> mbuffat</a></i></p>\n"
      ]
     },
     {
@@ -204,7 +208,21 @@
       }
      },
      "source": [
-      "<h1><div id=\"talk-subtitle\">Pourquoi <img style=\"display:inline; width:250px;\"src=\"Figures/python.png\"></div></h1>\n",
+      "<h1><div id=\"talk-subtitle\">Pourquoi <img style=\"display:inline; width:250px;\"src=\"Figures/python.png\"></div></h1>\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 7
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
       "\n",
       "<p style=\"text-align: left;\"><i class=\"icon-meh icon-2x\"> Suivre une mode</i></p>\n",
       "\n",
@@ -216,7 +234,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -237,7 +255,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -265,7 +283,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -288,20 +306,20 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 16,
        "text": [
-        "<IPython.lib.display.YouTubeVideo at 0x7f533432aed0>"
+        "<IPython.lib.display.YouTubeVideo at 0x7f4e80221090>"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -317,7 +335,7 @@
       "\n",
       "- Python, R, Ruby, bash\n",
       "\n",
-      "<p style=\"text-align: left;\"><i class=\"icon-check icon-2x\"> avec un navigateur Web</i></p>\n",
+      "<p style=\"text-align: left;\"><i class=\"icon-check icon-2x\"> Utilise un navigateur Web</i></p>\n",
       "\n",
       "- Markdown + HTML  \n",
       "- texte + $\\LaTeX$ + image + vid\u00e9o\n",
@@ -326,7 +344,7 @@
       "\n",
       "- Matplotlib, Numpy, Scipy\n",
       "\n",
-      "<center><a href=\"http://localhost:8900/notebooks/COURS_ALGORITHME/Swinging_pendulum.ipynb\">Exemple de notebook Ipython: ** \"Swinging pendulum\" **</a></center>"
+      "###<center>Notebook Ipython: <a href=\"http://localhost:8900/notebooks/COURS_ALGORITHME/Swinging_pendulum.ipynb\">  \"Swinging pendulum\"</a> et <a href=\"http://localhost:8900/notebooks/EltFinis2D/Laplace2D.ipynb\">\"Elements finis\"</a></center>"
      ]
     },
     {
@@ -334,7 +352,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -356,7 +374,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -379,20 +397,20 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 17,
        "text": [
-        "<IPython.lib.display.YouTubeVideo at 0x7f53342b4110>"
+        "<IPython.lib.display.YouTubeVideo at 0x7f4e802215d0>"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -414,7 +432,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -437,20 +455,20 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 18,
        "text": [
-        "<IPython.lib.display.IFrame at 0x7f533432a490>"
+        "<IPython.lib.display.IFrame at 0x7f4e80221290>"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -466,7 +484,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -483,7 +501,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -513,7 +531,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -546,7 +564,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -559,7 +577,7 @@
       "<h1><div id=\"talk-subtitle\">Le\u00e7on avec <img style=\"float:center; display:inline; width:400px;\" src='Figures/ipynblogo.png'></div></h1>\n",
       "\n",
       "<center><h3>\n",
-      "<a href=\"COURS_PRECISION/Precision.ipynb\">Cours sur la pr\u00e9cision et la validation</a>\n",
+      "<a href=\"http://localhost:8900/notebooks/COURS_PRECISION/Precision.ipynb\">Cours sur la pr\u00e9cision et la validation</a>\n",
       "</h3></center>\n",
       "<p>\n",
       "<center>\n",
@@ -570,6 +588,11 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 8,
+       "slide_type": "subslide"
+      },
       "slideshow": {
        "slide_type": "slide"
       }
@@ -584,7 +607,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -612,7 +635,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -633,7 +656,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -656,13 +679,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 19,
        "text": [
-        "<IPython.lib.display.IFrame at 0x7f533432abd0>"
+        "<IPython.lib.display.IFrame at 0x7f4e802017d0>"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 19
     },
     {
      "cell_type": "heading",
@@ -670,7 +693,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -691,7 +714,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -714,13 +737,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 20,
        "text": [
-        "<IPython.lib.display.IFrame at 0x7f533432aa90>"
+        "<IPython.lib.display.IFrame at 0x7f4e64c7c650>"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 20
     },
     {
      "cell_type": "heading",
@@ -728,7 +751,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -749,7 +772,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -772,20 +795,20 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 21,
        "text": [
-        "<IPython.lib.display.IFrame at 0x7f533432afd0>"
+        "<IPython.lib.display.IFrame at 0x7f4e64c7ca10>"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -818,7 +841,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 7,
+       "frag_number": 8,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -840,7 +863,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 30,
+       "frag_number": 31,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -850,13 +873,15 @@
      },
      "source": [
       "\n",
-      "<p style=\"text-align: left;\"><i class=\"icon-thumbs-down-alt icon-2x\"> Am\u00e9lioration</i></p>\n",
+      "<p style=\"text-align: left;\"><i class=\"icon-meh icon-2x\"> Am\u00e9lioration</i></p>\n",
       "\n",
-      "- nconvert, live reveal\n",
+      "- qques bugs: nconvert, live reveal\n",
       "\n",
-      "- serveur IPython avec partage des notebooks\n",
+      "<p style=\"text-align: left;\"><i class=\"icon-signout icon-2x\"> Besoin: serveur IPython avec partage des notebooks</i></p>\n",
       "\n",
-      "##<img style=\"float:center; display:inline; width:80px;\", src=\"Figures/sagemath-cloud.png\"/>  projet [Sage Math Cloud](https://cloud.sagemath.com/)"
+      "###<img style=\"float:center; display:inline; width:80px;\", src=\"Figures/sagemath-cloud.png\"/> [Sage Math Cloud](https://cloud.sagemath.com/) <img style=\"float:center; display:inline; width:80px;\", src=\"Figures/Jupiter.png\"/>[JUPYTHER](https://github.com/jupyter)\n",
+      "\n",
+      "<center>[serveur Jupiter Meca](https://ipythonmeca.univ-lyon1.fr:443)</center>"
      ]
     },
     {
@@ -864,7 +889,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 30,
+       "frag_number": 31,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -877,7 +902,7 @@
       "<h1><div id=\"talk-subtitle\">Remerciement</div></h1>\n",
       "\n",
       "<p style=\"text-align: left;\"><i class=\"icon-star icon-2x\"> D\u00e9partement de M\u00e9canique:</i></p>\n",
-      "Delphine Doppler, Claude Inserra, Yannick Rozenberg, Pierre Valiorgue, Ivana Vinkovic,..\n",
+      "Delphine Doppler, Claude Inserra, Yannick Rozenberg, Pierre Valiorgue, Ivana Vinkovic,....\n",
       "\n",
       "<p style=\"text-align: left;\"><i class=\"icon-star icon-2x\"> Projet Mooc **INPROS**:</i></p>\n",
       "Violaine Louvet, Michel Kern, Anne Cadiou, Loic Gouarin, Laurence Viry\n",
@@ -894,7 +919,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 30,
+       "frag_number": 31,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -907,7 +932,7 @@
       "<center>\n",
       "<img style=\"float:center; display:inline; width:400px;\" src='Figures/face_question_mark1.png'> \n",
       "</center>\n",
-      "<h3>Power by </h3><img src='Figures/ipynblogo.png'>"
+      "<h3>Power by </h3><img src='ipynblogo.png'>"
      ]
     }
    ],
