--- a/PYconFR2014.ipynb
+++ b/PYconFR2014.ipynb
@@ -1,7 +1,8 @@
 {
  "metadata": {
+  "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:8dff7f58e12584519f236c6bc7182a03b0155c84bea12a9a74cc562d453e34de"
+  "signature": "sha256:9c7a6437ce1617299d2c9f1910cdab975e7533861cd779ffaa94cdb64d4af64a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -932,7 +933,7 @@
       "<center>\n",
       "<img style=\"float:center; display:inline; width:400px;\" src='Figures/face_question_mark1.png'> \n",
       "</center>\n",
-      "<h3>Power by </h3><img src='ipynblogo.png'>"
+      "<h3>Power by </h3><img src='Figures/ipynblogo.png'>"
      ]
     }
    ],
